# swoosher

./: Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml
.github/workflows/: release.yml
scripts/: dev.sh  package.sh
src/: config.rs  constants.rs  delegate.rs  launch_agent.rs  main.rs  server.rs  spaces.rs  updater.rs  watcher.rs
src/ui/: views.rs
src/utils/: log.rs  macos.rs  mod.rs
