[package]
name = "swoosher"
version = "0.1.0"
edition = "2024"

[lints.clippy]
# Stylistic
self_named_module_files = "deny"
needless_return = "allow"
single_match = "allow"

# Annoying default lints
uninlined_format_args = "allow" # Inconsistency with complex format args
new_without_default = "allow"   # Not all types make sense with default

# Safety
await_holding_invalid_type = "deny"
await_holding_refcell_ref = "deny"
await_holding_lock = "deny"
disallowed_types = "deny"
disallowed_methods = "deny"

[profile.release]
codegen-units = 1
lto = "fat"

[profile.dev]
opt-level = 1
lto = "off"
codegen-units = 256
overflow-checks = false

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false

[dependencies]
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
color-eyre = "0.6"
camino = "1.2"
fs-err = "3"
clap = { version = "4.6", features = ["derive"] }
etcetera = "0.11"
dispatch2 = "0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSRunLoop", "NSAttributedString", "NSDictionary", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSAlert", "NSAttributedString", "NSMenu", "NSMenuItem", "NSParagraphStyle", "NSStatusBar", "NSStatusBarButton", "NSStatusItem", "NSResponder", "NSControl", "NSButton", "NSImage", "NSGraphics", "NSPanel", "NSWindow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
semver = "1"
tempfile = "3"
jiff = { version = "0.2.23", features = ["serde"] }
tap = "1.0.1"
notify = "9.0.0-rc.2"
toml_edit = { version = "0.25.8", features = ["serde"] }
figment2 = { version = "0.11.4", features = ["toml", "env"] }
smart-default = "0.7.1"
documented = "0.9.2"
open = "5.3.3"
edit = "0.1.5"
